--- a/templates/goodbye.twig
+++ b/templates/goodbye.twig
@@ -1,2 +1,8 @@
+{% extends "layout.html" %}
+
+{% block title %}Goodbye!{% endblock %}
+
+{% block content %}
 <h1>Goodbye!</h1>
 <h2>Want to go <a href="{{ app.url_generator.generate('home') }}">back</a>?</h2>
+{% endblock %}
