Added templates and routes for home, about and contact

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
 <title>{% block title %}{% endblock %} - A Simple Silex Application</title>
 </head>
 <body>
+{% include 'navigation.html' %}
 {% block content %}{% endblock %}
 </body>
 </html>
