--- a/templates/contact.twig
+++ b/templates/contact.twig
@@ -4,4 +4,10 @@
 
 {% block content %}
 <h1>I am the contact page</h1>
+
+<form action="#" method="post">
+    {{ form_widget(form) }}
+
+    <input type="submit" name="submit">
+</form>
 {% endblock %}
