renamed templates from .html to .twig

--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -9,7 +9,7 @@
     {% endblock %}
 </head>
 <body>
-{% include 'navigation.html' %}
+{% include 'navigation.twig' %}
 <div class="container assa">
     {% block content %}{% endblock %}
 </div>
